fix bad color in scrollbar mixin

--- a/resources/assets/css/common/functions.less
+++ b/resources/assets/css/common/functions.less
@@ -46,11 +46,9 @@
   }
 }
 .scrollbar_inner() {
-  .scrollbar({ width: .5em; });
-  .scrollbar_thumb({ border: .125em solid @dye_inner; });
-  &:hover {
-    .scrollbar_thumb({ background: fade(@dye_outer, (100 * @opacity_darker_dark)); });
-  }
+                  .scrollbar({ width: .5em;                     });
+            .scrollbar_thumb({ border: .125em solid @dye_inner; });
+  &:hover { .scrollbar_thumb({ background: @gray_dark;          }); }
 }
 .icon(@type; @value) {
   .iconpile {
